@@ -474,6 +474,17 @@
             <style>bold</style>
         </font>
         <font>
+        	<name>Font-MusicVis-Lyrics</name>
+        	<filename>alaska_thin.ttf</filename>
+            <size>92</size>
+            <linespacing>0.75</linespacing>
+        </font>
+        <font>
+        	<name>Font-MusicVis-Lyrics-Big</name>
+        	<filename>alaska_thin.ttf</filename>
+            <size>135</size>
+        </font>
+        <font>
         	<name>Font-MusicVis-Time</name>
         	<filename>alaska_thin.ttf</filename>
             <size>240</size>
