@@ -2,9 +2,26 @@
     <defaultcontrol>-</defaultcontrol>
     <allowoverlay>no</allowoverlay>
     <onload condition="System.HasAddon(script.artistslideshow) + Skin.HasSetting(ArtistSlideShow.Enabled)">RunScript(script.artistslideshow)</onload>
+    <onload condition="!IsEmpty(Skin.String(LyricScript_Path)) + Skin.HasSetting(lyrics.autorun)">XBMC.RunScript($INFO[Skin.String(LyricScript_Path)])</onload>
     <controls>
         <include>CommonItemsMusicOSD</include>
-        
+        <control type="image">
+            <description>media info background image</description>
+            <posx>0</posx>
+            <posy>0</posy>
+            <width>1920</width>
+            <height>1080</height>
+            <texture>windows/common/black.png</texture>
+            <aspectratio>stretch</aspectratio>
+            <colordiffuse>99ffffff</colordiffuse>
+            <animation type="Visible">
+                <effect type="fade" start="0" end="100" tween="sine" easing="inout" time="250" />
+            </animation>
+            <animation type="Hidden">
+                <effect type="fade" start="100" end="0" tween="sine" easing="inout" time="250" />
+            </animation>
+            <visible>Window.IsVisible(script-XBMC_Lyrics-main.xml)</visible>
+        </control>
         <control type="group">
         	<visible>Skin.HasSetting(musicvis.small)</visible>
 			<!-- OSD TEXT idea from Bello -->
@@ -13,7 +30,7 @@
 				<animation effect="fade" time="600">Hidden</animation>
 				<posy>100</posy>
 				<control type="group">
-					<visible>!Skin.HasSetting(musicvis.hidetext)</visible>
+					<visible>!Skin.HasSetting(musicvis.hidetext) + !Window.IsVisible(script-XBMC_Lyrics-main.xml)</visible>
 					<control type="label">
 						<description>Now Playing</description>
 						<posx>0</posx>
@@ -607,7 +624,7 @@
 				<animation effect="fade" time="600">Visible</animation>
 				<animation effect="fade" time="600">Hidden</animation>
 				<control type="group">
-					<visible>!Skin.HasSetting(musicvis.hidetext)</visible>
+					<visible>!Skin.HasSetting(musicvis.hidetext) + !Window.IsVisible(script-XBMC_Lyrics-main.xml)</visible>
 					<control type="label">
 						<description>Now Playing</description>
 						<posx>0</posx>
