@@ -20,50 +20,29 @@
             <posy>-100</posy>
             <visible>false</visible>
         </control>
-        <control type="image">
-            <description>media info background image</description>
-            <posx>-100</posx>
-            <posy>-100</posy>
-            <width>2120</width>
-            <height>862</height>
-            <texture>arctic/osd/fade.png</texture>
-            <aspectratio>stretch</aspectratio>
-            <animation type="WindowOpen">
-                <effect type="fade" start="0" end="100" tween="sine" easing="inout" time="250" />
-                <effect type="zoom" start="-100,0,2120,112" end="-100,209,2120,662" time="250" tween="quadratic" easing="out" />
-            </animation>
-            <animation type="WindowClose">
-                <effect type="fade" start="100" end="0" tween="sine" easing="inout" time="250" />
-                <effect type="slide" start="0,0" end="0,-600" time="300" tween="quadratic" easing="out" />
-            </animation>
-            <!--<animation effect="slide" start="0,0" end="0,-209" time="300" tween="cubic" easing="inout" condition="[Player.ShowInfo | Player.Paused] + !Window.IsActive(musicosd)">Conditional</animation>-->
-        </control>
         <control type="group">
-        	<posy>-209</posy>
+        	<posy>0</posy>
             <animation type="WindowOpen">
                 <effect type="fade" start="0" end="100" tween="sine" easing="inout" time="250" />
-                <effect type="slide" start="0,0" end="0,209" time="250" tween="quadratic" easing="out" />
             </animation>
             <animation type="WindowClose">
                 <effect type="fade" start="100" end="0" tween="sine" easing="inout" time="250" />
-                <effect type="slide" start="0,0" end="0,-600" time="300" tween="quadratic" easing="out" />
             </animation>
-            <!--<animation effect="slide" start="0,0" end="0,-209" time="300" tween="cubic" easing="inout" condition="[Player.ShowInfo | Player.Paused] + !Window.IsActive(musicosd)">Conditional</animation>-->
             <control type="textbox" id="100">
         		<description>textarea</description>
         		<posx>100</posx>
-        		<posy>59</posy>
+        		<posy>90</posy>
         		<width>1720</width>
-        		<height>725</height>
+        		<height>590</height>
         		<autoscroll time="2000" delay="10000" repeat="10000">!Control.HasFocus(101)</autoscroll>
-        		<font>Font-Condensed-S50</font>
-        		<textcolor>aawhite</textcolor>
+        		<font>Font-MusicVis-Lyrics</font>
+        		<textcolor>77white</textcolor>
         		<align>center</align>
         	</control>
         	<control type="list" id="110">
-        	    <posx>100</posx>
-        	    <posy>30</posy>
-        	    <width>1720</width>
+        	    <posx>0</posx>
+        	    <posy>0</posy>
+        	    <width>1920</width>
         	    <height>350</height>
         		<onleft>112</onleft>
         		<onright>112</onright>
@@ -71,34 +50,56 @@
         		<ondown>110</ondown>
         		<viewtype label="535">list</viewtype>
         		<pagecontrol>112</pagecontrol>
-        		<scrolltime tween="sine" easing="out">600</scrolltime>
+        		<scrolltime tween="sine" easing="out">0</scrolltime>
         		<focusposition>2</focusposition>
         		<movement>0</movement>
         		<itemlayout width="1720" height="68">
-        		    <control type="label">
-        		        <posx>860</posx>
-        				<posy>0</posy>
-        				<width>1720</width>
-        				<height>68</height>
-        				<label fallback="•••">$INFO[ListItem.Label]</label>
-        				<font>Font-Condensed-S60</font>
-        				<align>center</align>
-        				<textcolor>aawhite</textcolor>
-        		    </control>
         		</itemlayout>
         		<focusedlayout width="1720" height="68">
-        		    <control type="label">
-        		        <posx>860</posx>
-        		    	<posy>0</posy>
-        		    	<width>1720</width>
-        		    	<height>68</height>
-        		    	<label fallback="•••">$INFO[ListItem.Label,[B],[/B]]</label>
-        		    	<font>Font-Condensed-S60</font>
-        		    	<align>center</align>
-        		    	<textcolor>eewhite</textcolor>
-        		    </control>
         		</focusedlayout>
         	</control>
+        	<control type="group">
+        		<visible>!Control.IsVisible(100)</visible>
+				<control type="label">
+					<posx>0</posx>
+					<posy>325</posy>
+					<width>1920</width>
+					<height>100</height>
+					<label fallback="•••">$INFO[Container(110).ListItem(-1).Label]</label>
+					<font>Font-MusicVis-Lyrics</font>
+					<align>center</align>
+					<textcolor>77bbbbbb</textcolor>
+					<scrollspeed>80</scrollspeed>
+					<pauseatend>0</pauseatend>
+					<scrollsuffix>           ...           </scrollsuffix>
+				</control>
+				<control type="label">
+					<posx>0</posx>
+					<posy>390</posy>
+					<width>1920</width>
+					<height>100</height>
+					<label fallback="•••">$INFO[Container(110).ListItem.Label]</label>
+					<font>Font-MusicVis-Lyrics-Big</font>
+					<align>center</align>
+					<textcolor>77ffffff</textcolor>
+					<scrollspeed>80</scrollspeed>
+					<pauseatend>0</pauseatend>
+					<scrollsuffix>           ...           </scrollsuffix>
+				</control>
+				<control type="label">
+					<posx>0</posx>
+					<posy>460</posy>
+					<width>1920</width>
+					<height>100</height>
+					<label fallback="•••">$INFO[Container(110).ListItem(1).Label]</label>
+					<font>Font-MusicVis-Lyrics</font>
+					<align>center</align>
+					<textcolor>77bbbbbb</textcolor>
+					<scrollspeed>80</scrollspeed>
+					<pauseatend>0</pauseatend>
+					<scrollsuffix>           ...           </scrollsuffix>
+				</control>
+			</control>
         	<control type="scrollbar" id="112">
         	    <description>Scrollbar</description>
         	    <posx>1830</posx>
